# localizer

./: FileHandler.py  LICENSE  README.md  TODO  __init__.py  examples.py  language_pack.py  print_replace.py  pyproject.toml  requirements.txt  update_version.py
documentation/source/: conf.py  localizer.supported_file_types.rst  modules.rst
scripts/: localizer_pack_fill.py  update_version.py
src/: language_pack.py  print_replace.py
src/supported_file_types/: dot_csv.py  dot_json.py
supported_file_types/: __init__.py  dot_csv.py  dot_json.py
tests/: file_handlers.py  language_pack.py  print_replace.py
