[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "Localizer"
version = "1.3"
authors = [
    {name="Vbrawl", email="konstantosjim@gmail.com"},
]
description = "An easy way to translate the application interfaces."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/Vbrawl/localizer"